--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header Start-->
      <header>
         <div id="nav-bar">
-            <img src="/img/logo.png" alt="Plated Dreams Logo">
+            <img src="img/logo.png" alt="Plated Dreams Logo">
             <nav>
                 <ul>
                     <li><a href="#home" title="home">Home</a></li>
@@ -59,7 +59,7 @@
                         </p>
                         <a href="#" class="btn btn-secondary">LEARN MORE</a>
                     </div>
-                    <img src="/img/about.png" alt="about image">
+                    <img src="img/about.png" alt="about image">
                 </div>
             </div>
         </section>
@@ -295,4 +295,5 @@
         <p>Copyright &copy; 2025 All rights reserved | Made by <b class="b">Boussouar Djilali Fawzi</b></p>
     </footer>
 </body>
+
 </html>
